# poem_askama

./: Cargo.toml  README.md
src/: main.rs
templates/: greet.html  index.html  prompt.html
